--- a/index.html
+++ b/index.html
@@ -21,27 +21,7 @@
 			</div>
 		</div>
 
-		<div id="sheet">
-			<h3>傳送至表單</h3>	
-			<div class="col-md-6">
-				<div class="form-group">
-					<input type="text" class="form-control" placeholder="Name" id="name">
-				</div>
-			</div>
-			<div class="col-md-6">
-				<div class="form-group">
-					<input type="text" class="form-control" placeholder="Email" id="email">
-				</div>
-			</div>
-			<div class="col-md-12">
-				<div class="form-group">
-					<textarea name="" class="form-control" cols="30" rows="7" placeholder="Message" id="message"></textarea>
-				</div>
-			</div>
-			<div class="form-group">
-				<input type="submit" value="Send Message" class="btn btn-primary" id="send">
-			</div>
-		</div>
+
 		<div id="check" >	
 			<div class="step-1" id="checkout-progress" data-current-step="2" >
 				<div class="progress-bar">
@@ -64,29 +44,47 @@
 				</div>
 			</div>
 		</div>
-		<button class="js-back-to-top back-to-top" title="回到頭部">&#65085;</button>
+
+
+
 		<div class="wrap-about">
 			<div class="about">
-				<h3>關於我們：</h3>
-				<p>
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque ab minus saepe sit maxime ex, labore, repellat, aperiam non beatae eligendi sunt laboriosam ipsa? Aut esse error et. Commodi, non!
-				</p>
+				<p class="separator"><span>活動起源<br/>CONCEPT</span></p>
+				<div class="content">
+					<p>
+						道務推動上無論學界、伙食團,常運用蔬食連署活動
+						做廣結善緣、推動道務的模式,此次除了蔬食連署外
+						,更結合「植樹」、「達成解鎖」、「社群經營」的概念
+						,希望能夠創造不同以往的蔬食話題。
+					</p>
+				</div>
 			</div>
 
 			<div class="about">
-				<h3>理念：</h3>
-				<p>
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque ab minus saepe sit maxime ex, labore, repellat, aperiam non beatae eligendi sunt laboriosam ipsa? Aut esse error et. Commodi, non!
-				</p>
+				<p class="separator"><span>關於我們<br/>ABOUT</span></p>
+				<div class="content">
+					<p>
+						道務推動上無論學界、伙食團,常運用蔬食連署活動
+						做廣結善緣、推動道務的模式,此次除了蔬食連署外
+						,更結合「植樹」、「達成解鎖」、「社群經營」的概念
+						,希望能夠創造不同以往的蔬食話題。
+					</p>
+				</div>
 			</div>
 	
 		</div>
+
+		<button class="js-back-to-top back-to-top" title="回到頭部">&#65085;</button>
 		<!-- partial:index.partial.html -->
+		
+
+
+		<div class="wrap-about">
+			<p class="separator"><span>活動照片<br/>RECORDS</span></p>
+		</div>
+
 	<div class="rwd_slider_container_wrapper">
 		<div class="photo">
-			<h3>
-				活動照片：
-			</h3>
 		</div>
 		<div class="rwd_slider_container">
 		  <div class="slider_container" >
@@ -109,7 +107,94 @@
 		</div><!-- end of .embed-responsive -->
 	  </div><!-- end of .embed-responsive-box -->
 	  <!-- partial -->
+
+
+	<div class="wrap-about">
+		<p class="separator"><span>活動內容<br/>CONTENT</span></p>
+	</div>
+
+	<div class="event">
+		<div class="event-icon">
+			<i class="fa fa-dot-circle-o" aria-hidden="true"></i>
+		</div>
+		<div class="event-text">
+			<p>
+				<b>事前登記好禮：</b>登記參與就送伙食團用餐卷,憑此卷到伙食團用餐免費。
+			</p>	
+		</div>
+	</div>
 	
+	<div class="event">
+		<div class="event-icon">
+			<i class="fa fa-dot-circle-o" aria-hidden="true"></i>
+		</div>
+		<div class="event-text">
+			<p>
+				<b>蔬食防疫包：</b>
+				累積人數達成5,000次,所有參與對象
+				皆可到各校各伙領取蔬食防疫包,防疫包内含餅乾、
+				點心、飲料、正能小卡等。
+			</p>	
+		</div>
+	</div>
+
+	<div class="event">
+		<div class="event-icon">
+			<i class="fa fa-dot-circle-o" aria-hidden="true"></i>
+		</div>
+		<div class="event-text">
+			<p>
+				<b>伙食團蔬食特色大餐：</b>
+				累積人數達成20,000次,將
+				招待參與對象回到各伙享用蔬食特色大餐。
+				蔬食便當到你家:累積人數達成50,000次,參與對
+				象可向各伙食團訂餐一同在校內相約用餐,一起為此
+				努力累積。
+			</p>	
+		</div>
+	</div>
+
+	<div class="event">
+		<div class="event-icon">
+			<i class="fa fa-dot-circle-o" aria-hidden="true"></i>
+		</div>
+		<div class="event-text">
+			<p>
+				<b>蔬食小夜市：</b>
+				累積人數達成80,000次,將舉辦蔬食
+				小夜市活動,同時可配合研究班合班或相關類型活動
+				一起舉行,或與第六項合併執行。
+				植下代表善念的樹:累積人數達成100000次,種下
+				真正的樹,將本來虛擬的行動轉變成真實的行動,讓
+				蔬食用餐的念具現成正的樹種下。
+			</p>	
+		</div>
+	</div>
+
+
+
+	  <div id="sheet">
+		<h3>傳送至表單</h3>	
+		<div class="col-md-6">
+			<div class="form-group">
+				<input type="text" class="form-control" placeholder="Name" id="name">
+			</div>
+		</div>
+		<div class="col-md-6">
+			<div class="form-group">
+				<input type="text" class="form-control" placeholder="Email" id="email">
+			</div>
+		</div>
+		<div class="col-md-12">
+			<div class="form-group">
+				<textarea name="" class="form-control" cols="30" rows="7" placeholder="Message" id="message"></textarea>
+			</div>
+		</div>
+		<div class="form-group">
+			<input type="submit" value="Send Message" class="btn btn-primary" id="send">
+		</div>
+	</div>
+
 	</div>
 
 <link rel="stylesheet" type="text/css" id="applicationStylesheet" href="./css/home.css"/>
