--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <title>Plant Tree V2</title>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+<script id="applicationScript" type="text/javascript" src="./js/counter.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
 <link rel="stylesheet" href="./css/style.css">
 <link rel="stylesheet" href="./css/Carousel.css">
 <link rel="stylesheet" href="./css/BackToTop.css">
+<link rel="stylesheet" href="./css/counter.css">
 </head>
 <body>
 	<div id="D" class="D">
@@ -21,6 +24,11 @@
 			</div>
 		</div>
 
+
+		<div class="counter-wrap">
+			<h1><span class="counter"></span>0</h1>
+			<h3>達成人數</h3>
+		</div>
 
 		<div id="check" >	
 			<div class="step-1" id="checkout-progress" data-current-step="2" >
@@ -198,6 +206,8 @@
 	</div>
 
 <link rel="stylesheet" type="text/css" id="applicationStylesheet" href="./css/home.css"/>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
+<script src="./js/jquery.counterup.min.js"></script>
 <script id="applicationScript" type="text/javascript" src="./js/home.js"></script>
 <script type="text/javascript" src="./js/script.js"></script>
 <script type="text/javascript" src="./js/sheet.js"></script>
