--- a/index.html
+++ b/index.html
@@ -60,10 +60,11 @@
 				<p class="separator"><span>活動起源<br/>CONCEPT</span></p>
 				<div class="content">
 					<p>
-						道務推動上無論學界、伙食團,常運用蔬食連署活動
-						做廣結善緣、推動道務的模式,此次除了蔬食連署外
-						,更結合「植樹」、「達成解鎖」、「社群經營」的概念
-						,希望能夠創造不同以往的蔬食話題。
+						蔬食(Vegan)在全世界已經形成一種風氣、潮流甚至演進出文化，每位成為蔬食者的理由不盡相同，可能因為宗教信仰、環保意識、身體健康甚至是祈福還願，但全部的蔬食者都有一個共通點，就是不願傷害動物。
+						「世界素食人口報告」調查，2020年台灣的素食人口突破300萬人，約佔台灣總人口13%，依照比例世界各國排名，台灣僅次於墨西哥、印度。
+						<br>
+						為了推廣「蔬食、環保、愛地球」，各校社團都用盡各種方法，希望讓更多不認識蔬食的人，藉以認識，或是討論，甚至嘗試，這次我們決定結合時下「專注種樹」的概念作為推廣核心，延伸出更多一系列的活動。
+						當我們吃一餐蔬食，就能種下一顆虛擬的「樹」，畫面上的每顆「樹」，代表大家為地球努力的次數，也是為推廣作最好的敘述，當突破了關鍵的次數，我們會舉辦特別的活動，送大家特別的禮物，讓我們一起努力種下代表愛與希望的「樹」。
 					</p>
 				</div>
 			</div>
@@ -72,10 +73,9 @@
 				<p class="separator"><span>關於我們<br/>ABOUT</span></p>
 				<div class="content">
 					<p>
-						道務推動上無論學界、伙食團,常運用蔬食連署活動
-						做廣結善緣、推動道務的模式,此次除了蔬食連署外
-						,更結合「植樹」、「達成解鎖」、「社群經營」的概念
-						,希望能夠創造不同以往的蔬食話題。
+						台灣的大學中，大多都有推動蔬食文化性質的社團，我們是集合逢甲大學、靜宜大學、東海大學、彰化師範大學、大葉大學、勤益科技大學、建國科技大學、嶺東科技大學、僑光科技大學、弘光科技大學等10所大學的「崇德青年社」共同合作，舉辦這次的活動。
+						<br>
+						我們平時除了推廣蔬食文化外，也進行志工服務、環境保護、心靈成長等活動，希望能在大學四年間，累積正向多元的經驗，創造與眾不同的青春回憶。
 					</p>
 				</div>
 			</div>
@@ -119,66 +119,78 @@
 
 	<div class="wrap-about">
 		<p class="separator"><span>活動內容<br/>CONTENT</span></p>
-	</div>
 
-	<div class="event">
-		<div class="event-icon">
-			<i class="fa fa-dot-circle-o" aria-hidden="true"></i>
+		<div class="event">
+			<div class="event-icon">
+				<i class="fa fa-dot-circle-o" aria-hidden="true"></i>
+			</div>
+			<div class="event-text">
+				<p>
+					<b>事前登記好禮：</b>登記參與活動，就送伙食團最佳用餐卷，憑此卷到伙食團用餐免費。
+				</p>	
+			</div>
 		</div>
-		<div class="event-text">
-			<p>
-				<b>事前登記好禮：</b>登記參與就送伙食團用餐卷,憑此卷到伙食團用餐免費。
-			</p>	
+		
+		<div class="event">
+			<div class="event-icon">
+				<i class="fa fa-dot-circle-o" aria-hidden="true"></i>
+			</div>
+			<div class="event-text">
+				<p>
+					<b>蔬食防疫包：</b>
+					所有參與對象皆可到各個伙食團領取「蔬食ALL PASS包」，ALL PASS包內含餅乾、點心、飲料、正能量小卡等。
+				</p>	
+			</div>
 		</div>
-	</div>
 	
-	<div class="event">
-		<div class="event-icon">
-			<i class="fa fa-dot-circle-o" aria-hidden="true"></i>
+		<div class="event">
+			<div class="event-icon">
+				<i class="fa fa-dot-circle-o" aria-hidden="true"></i>
+			</div>
+			<div class="event-text">
+				<p>
+					<b>伙食團蔬食特色大餐：</b>
+					當累積此數達成20,000次，將會解鎖此項目。
+				</p>	
+			</div>
 		</div>
-		<div class="event-text">
-			<p>
-				<b>蔬食防疫包：</b>
-				累積人數達成5,000次,所有參與對象
-				皆可到各校各伙領取蔬食防疫包,防疫包内含餅乾、
-				點心、飲料、正能小卡等。
-			</p>	
+	
+		<div class="event">
+			<div class="event-icon">
+				<i class="fa fa-dot-circle-o" aria-hidden="true"></i>
+			</div>
+			<div class="event-text">
+				<p>
+					<b>敬請期待：</b>
+					當累積此數達成50,000次，將會解鎖此項目。
+				</p>	
+			</div>
 		</div>
+	
+		<div class="event">
+			<div class="event-icon">
+				<i class="fa fa-dot-circle-o" aria-hidden="true"></i>
+			</div>
+			<div class="event-text">
+				<p>
+					<b>敬請期待：</b>
+					當累積此數達成80,000次，將會解鎖此項目。
+				</p>	
+			</div>
+		</div>
+	
+		<div class="event">
+			<div class="event-icon">
+				<i class="fa fa-dot-circle-o" aria-hidden="true"></i>
+			</div>
+			<div class="event-text">
+				<p>
+					<b>敬請期待：</b>
+					當累積此數達成100,000次，將會解鎖此項目。
+				</p>	
+			</div>
+		</div>	
 	</div>
-
-	<div class="event">
-		<div class="event-icon">
-			<i class="fa fa-dot-circle-o" aria-hidden="true"></i>
-		</div>
-		<div class="event-text">
-			<p>
-				<b>伙食團蔬食特色大餐：</b>
-				累積人數達成20,000次,將
-				招待參與對象回到各伙享用蔬食特色大餐。
-				蔬食便當到你家:累積人數達成50,000次,參與對
-				象可向各伙食團訂餐一同在校內相約用餐,一起為此
-				努力累積。
-			</p>	
-		</div>
-	</div>
-
-	<div class="event">
-		<div class="event-icon">
-			<i class="fa fa-dot-circle-o" aria-hidden="true"></i>
-		</div>
-		<div class="event-text">
-			<p>
-				<b>蔬食小夜市：</b>
-				累積人數達成80,000次,將舉辦蔬食
-				小夜市活動,同時可配合研究班合班或相關類型活動
-				一起舉行,或與第六項合併執行。
-				植下代表善念的樹:累積人數達成100000次,種下
-				真正的樹,將本來虛擬的行動轉變成真實的行動,讓
-				蔬食用餐的念具現成正的樹種下。
-			</p>	
-		</div>
-	</div>
-
 
 
 	  <div id="sheet">
