加入字型檔

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				<p class="separator"><span>關於我們<br/>ABOUT</span></p>
 				<div class="content">
 					<p>
-						台灣的大學中，大多都有推動蔬食文化性質的社團，我們是集合逢甲大學、靜宜大學、東海大學、彰化師範大學、大葉大學、勤益科技大學、建國科技大學、嶺東科技大學、僑光科技大學、弘光科技大學等10所大學的「崇德青年社」共同合作，舉辦這次的活動。
+						台灣的大學中，大多都有推動蔬食文化性質的社團，我們是集合逢甲大學、靜宜大學、勤益科技大學、東海大學、彰化師範大學、大葉大學、建國科技大學、嶺東科技大學、僑光科技大學、弘光科技大學等10所大學的「崇德青年社」共同合作，舉辦這次的活動。
 						<br>
 						我們平時除了推廣蔬食文化外，也進行志工服務、環境保護、心靈成長等活動，希望能在大學四年間，累積正向多元的經驗，創造與眾不同的青春回憶。
 					</p>
@@ -122,7 +122,7 @@
 
 		<div class="event">
 			<div class="event-icon">
-				<i class="fa fa-dot-circle-o" aria-hidden="true"></i>
+				<div class="icon"></div>
 			</div>
 			<div class="event-text">
 				<p>
@@ -133,7 +133,7 @@
 		
 		<div class="event">
 			<div class="event-icon">
-				<i class="fa fa-dot-circle-o" aria-hidden="true"></i>
+				<div class="icon"></div>
 			</div>
 			<div class="event-text">
 				<p>
@@ -145,7 +145,7 @@
 	
 		<div class="event">
 			<div class="event-icon">
-				<i class="fa fa-dot-circle-o" aria-hidden="true"></i>
+				<div class="icon"></div>
 			</div>
 			<div class="event-text">
 				<p>
@@ -157,7 +157,7 @@
 	
 		<div class="event">
 			<div class="event-icon">
-				<i class="fa fa-dot-circle-o" aria-hidden="true"></i>
+				<div class="icon"></div>
 			</div>
 			<div class="event-text">
 				<p>
@@ -169,7 +169,7 @@
 	
 		<div class="event">
 			<div class="event-icon">
-				<i class="fa fa-dot-circle-o" aria-hidden="true"></i>
+				<div class="icon"></div>
 			</div>
 			<div class="event-text">
 				<p>
@@ -181,7 +181,7 @@
 	
 		<div class="event">
 			<div class="event-icon">
-				<i class="fa fa-dot-circle-o" aria-hidden="true"></i>
+				<div class="icon"></div>
 			</div>
 			<div class="event-text">
 				<p>
