--- a/index.html
+++ b/index.html
@@ -16,7 +16,25 @@
 <link rel="stylesheet" href="./css/counter.css">
 </head>
 <body>
+
+	
+
 	<div id="D" class="D">
+		<input type="checkbox" name="" id="menu_control" >
+		<div class="header">
+			<div class="logo"></div>
+			<label for="menu_control" class="menu-btn">
+				<span>menu</span>
+			</label>					
+			<div class="header-item-wrap">
+				<a class="header-item">關於我們</a>
+				<a class="header-item">活動起源</a>
+				<a class="header-item">活動內容</a>
+				<a class="header-item">活動照片</a>
+			</div>
+		</div>
+
+
 		<div id="ground">
 			<img class="ground" src="./img/ground.png">
 			<div class="tree">
