--- a/index.html
+++ b/index.html
@@ -213,19 +213,19 @@
 
 	  <div id="sheet">
 		<h3>傳送至表單</h3>	
-		<div class="col-md-6">
+		<div class="col-md-12">
 			<div class="form-group">
-				<input type="text" class="form-control" placeholder="Name" id="name">
-			</div>
-		</div>
-		<div class="col-md-6">
-			<div class="form-group">
-				<input type="text" class="form-control" placeholder="Email" id="email">
+				<input type="number" class="form-control" placeholder="吃了...." id="name">
 			</div>
 		</div>
 		<div class="col-md-12">
 			<div class="form-group">
-				<textarea name="" class="form-control" cols="30" rows="7" placeholder="Message" id="message"></textarea>
+				<input type="text" class="form-control" placeholder="姓名" id="email">
+			</div>
+		</div>
+		<div class="col-md-12">
+			<div class="form-group">
+				<input class="form-control" placeholder="我要留言" id="message"></input>
 			</div>
 		</div>
 		<div class="form-group">
