修改JS和表單外框

--- a/index.html
+++ b/index.html
@@ -215,21 +215,21 @@
 		<h3>傳送至表單</h3>	
 		<div class="col-md-12">
 			<div class="form-group">
-				<input type="number" class="form-control" placeholder="吃了...." id="name">
+				<input type="number" class="form-control" placeholder="我要種很多樹" id="number">
 			</div>
 		</div>
 		<div class="col-md-12">
 			<div class="form-group">
-				<input type="text" class="form-control" placeholder="姓名" id="email">
+				<input type="text" class="form-control" placeholder="姓名" id="name">
 			</div>
 		</div>
 		<div class="col-md-12">
 			<div class="form-group">
-				<input class="form-control" placeholder="我要留言" id="message"></input>
+				<textarea type="text" rows="20" cols="23" class="form-control" placeholder="我要留言" id="message"></textarea>
 			</div>
 		</div>
 		<div class="form-group">
-			<input type="submit" value="Send Message" class="btn btn-primary" id="send">
+			<input type="submit" value="Send Message" class="btn btn-primary" id="send"></input>
 		</div>
 	</div>
 
