加入fotter和ig 圖示

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <script id="applicationScript" type="text/javascript" src="./js/counter.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="./css/style.css">
 <link rel="stylesheet" href="./css/Carousel.css">
 <link rel="stylesheet" href="./css/BackToTop.css">
@@ -79,12 +80,9 @@
 		
 		<div class="wrap-about">
 			<div class="about">
-				<p class="separator" id="concept"><span>活動起源<br/>CONCEPT</span></p>
+				<p class="separator" id="concept"><span>CONCEPT<br/>活動起源</span></p>
 				<div class="content">
 					<p>
-						蔬食(Vegan)在全世界已經形成一種風氣、潮流甚至演進出文化，每位成為蔬食者的理由不盡相同，可能因為宗教信仰、環保意識、身體健康甚至是祈福還願，但全部的蔬食者都有一個共通點，就是不願傷害動物。
-						「世界素食人口報告」調查，2020年台灣的素食人口突破300萬人，約佔台灣總人口13%，依照比例世界各國排名，台灣僅次於墨西哥、印度。
-						<br>
 						為了推廣「蔬食、環保、愛地球」，各校社團都用盡各種方法，希望讓更多不認識蔬食的人，藉以認識，或是討論，甚至嘗試，這次我們決定結合時下「專注種樹」的概念作為推廣核心，延伸出更多一系列的活動。
 						當我們吃一餐蔬食，就能種下一顆虛擬的「樹」，畫面上的每顆「樹」，代表大家為地球努力的次數，也是為推廣作最好的敘述，當突破了關鍵的次數，我們會舉辦特別的活動，送大家特別的禮物，讓我們一起努力種下代表愛與希望的「樹」。
 					</p>
@@ -112,7 +110,7 @@
 
 
 		<div class="wrap-about">
-			<p class="separator" id="event-photo"><span>活動照片<br/>RECORDS</span></p>
+			<p class="separator" id="event-photo"><span>RECORDS<br/>活動照片</span></p>
 		</div>
 
 	<div class="rwd_slider_container_wrapper">
@@ -142,7 +140,7 @@
 
 
 	<div class="wrap-about">
-		<p class="separator" id="event-content"><span>活動內容<br/>CONTENT</span></p>
+		<p class="separator" id="event-content"><span>CONTENT<br/>活動內容</span></p>
 
 		<div class="event">
 			<div class="event-icon">
@@ -237,9 +235,17 @@
 		<div class="form-group">
 			<input type="submit" value="Send Message" class="btn btn-primary" id="send"></input>
 		</div>
-	</div>
 
 	</div>
+	<div class="footer">
+		
+		<h3>發一崇德&emsp;中興學界</h3>
+		<a href="https://www.instagram.com/vegan._.tree/">
+			<i class="fa fa-instagram" style="font-size:36px"></i>
+		</a>
+		
+	</div>
+	</div><!--  #D END -->
 
 <link rel="stylesheet" type="text/css" id="applicationStylesheet" href="./css/home.css"/>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
