--- a/index.html
+++ b/index.html
@@ -118,22 +118,24 @@
 		</div>
 		<div class="rwd_slider_container">
 		  <div class="slider_container" >
+			  
 			<div>
-				<img src="https://via.placeholder.com/300x200.png?text=1" alt="pure css slider" width="400" height="500" />
-			  </div>
+				<img src="./img/slider1.jpg" alt="pure css slider" width="400" height="500" />
+			 </div>
+
 			  <div>
-				<img src="https://via.placeholder.com/300x200.png?text=2" alt="pure css slider" width="400" height="500" />
+				<img src="./img/slider2.jpg" alt="pure css slider" width="400" height="500" />
 			  </div>
+
 			  <div>
-				<img src="https://via.placeholder.com/300x200.png?text=3" alt="pure css slider" width="400" height="500" />
+				<img src="./img/slider3.jpg" alt="pure css slider" width="400" height="500" />
 			  </div>
+
 			  <div>
-				<img src="https://via.placeholder.com/300x200.png?text=4" alt="pure css slider" width="400" height="500" />
+				<img src="./img/slider4.jpg" alt="pure css slider" width="400" height="500" />
 			  </div>
-			  <div>
-				<img src="https://via.placeholder.com/300x200.png?text=5" alt="pure css slider" width="400" height="500" />
-			  </div>
-			  </div><!-- end of .pure_slider_container -->
+
+			</div>   <!-- end of .pure_slider_container -->
 		</div><!-- end of .embed-responsive -->
 	  </div><!-- end of .embed-responsive-box -->
 	  <!-- partial -->
