--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 
 		<div class="counter-wrap">
-			<h1><span class="counter"></span>0</h1>
+			<h1><span class="counter"></span> </h1>
 			<h3>達成人數</h3>
 		</div>
 
@@ -118,7 +118,7 @@
 		</div>
 		<div class="rwd_slider_container">
 		  <div class="slider_container" >
-			  
+
 			<div>
 				<img src="./img/slider1.jpg" alt="pure css slider" width="400" height="500" />
 			 </div>
