--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 		<h3>傳送至表單</h3>	
 		<div class="col-md-12">
 			<div class="form-group">
-				<input type="number" class="form-control" placeholder="我要種很多樹" id="number">
+				<input type="number" class="form-control" oninput="if(value>5)value=5" placeholder="我要種很多樹" id="number">
 			</div>
 		</div>
 		<div class="col-md-12">
