--- a/index.html
+++ b/index.html
@@ -52,28 +52,32 @@
 			<h3>達成人數</h3>
 		</div>
 
-		<div id="check" >	
-			<div class="step-1" id="checkout-progress" data-current-step="2" >
-				<div class="progress-bar">
-				  <div class="step step-1 active"><span> 1</span>
-					<div class="fa fa-check opaque"></div>
-					<div class="step-label"> 1K</div>
-				  </div>
-				  <div class="step step-2"><span> 2</span>
-					<div class="fa fa-check opaque"></div>
-					<div class="step-label"> 100K</div>
-				  </div>
-				  <div class="step step-3"><span> 3</span>
-					<div class="fa fa-check opaque"></div>
-					<div class="step-label"> 1000K</div>
-				  </div>
-				  <div class="step step-4"><span> 4</span>
-					<div class="fa fa-check opaque"></div>
-					<div class="step-label"> 1M</div>
-				  </div>
-				</div>
-			</div>
-		</div>
+		<ul class="list">
+			<li id="go" class="active">
+				GO
+			</li>
+
+			<li id="1w">
+				1萬
+				<span class="label">達成</span>
+			</li>
+			
+			<li id="10w">
+				10萬
+				<span class="label">達成</span>
+			</li>
+			
+			<li id="100w">
+				100萬
+				<span class="label">達成</span>
+			</li>
+			
+			<li id="1000w">
+				1000萬
+				<span class="label">達成</span>
+			</li>
+			
+		</ul>
 
 
 		<!-- <input type="button" value="我想種樹" name="plantButton" class="plant-button round" id="pb2"> -->
